# dotnet-aot-rust

./: .gitignore  Cargo.toml  LICENSE  build.rs
DotnetLib/: DotnetLib.csproj  Library.cs
src/: lib.rs  main.rs
